@@ -139,8 +139,11 @@
               <term><emphasis role="bold">blacklist</emphasis></term>
 
               <listitem>
-                <para>This option only makes sense for ports on a
-                bridge.</para>
+                <para>This option only makes sense for ports on a bridge. As
+                of Shoreawall 4.4.13, its use is deprecated and the effect of
+                the option is the same as specifying
+                <option>blacklist=1</option> on the associated entry in <ulink
+                url="shorewall-interfaces.html">shorewall-interfaces</ulink>(5).</para>
 
                 <para>Check packets arriving on this port against the <ulink
                 url="shorewall-blacklist.html">shorewall-blacklist</ulink>(5)
@@ -260,8 +263,9 @@ vpn         ppp+:192.168.3.0/24</programlisting></para>
     shorewall-masq(5), shorewall-nat(5), shorewall-nesting(5),
     shorewall-netmap(5), shorewall-params(5), shorewall-policy(5),
     shorewall-providers(5), shorewall-proxyarp(5), shorewall-route_rules(5),
-    shorewall-routestopped(5), shorewall-rules(5), shorewall.conf(5), shorewall-secmarks(5),
-    shorewall-tcclasses(5), shorewall-tcdevices(5), shorewall-tcrules(5),
-    shorewall-tos(5), shorewall-tunnels(5), shorewall-zones(5)</para>
+    shorewall-routestopped(5), shorewall-rules(5), shorewall.conf(5),
+    shorewall-secmarks(5), shorewall-tcclasses(5), shorewall-tcdevices(5),
+    shorewall-tcrules(5), shorewall-tos(5), shorewall-tunnels(5),
+    shorewall-zones(5)</para>
   </refsect1>
 </refentry>
